# logic-simulator

./: CMakeLists.txt
source/: bit.hpp  component.hpp  gates.hpp  main.cpp
